添加了部分方法

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 		<script src="board.js"></script>
 
 		<script type="text/javascript">
-			s = 'yes';
+			s = 'Are you <strong>Got it & me</strong> now?</p>';
+			alert(s);
+			s = escape_html(s);
+			alert(s);
 			document.writeln(s);
 		</script>
 	</head>
