修改了测试js的代码

--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 		<script src="board.js"></script>
 
 		<script type="text/javascript">
-			s = 'Are you <strong>Got it & me</strong> now?</p>';
-			alert(s);
-			s = escape_html(s);
-			alert(s);
-			document.writeln(s);
+			var email = 'apibra.in@gmail.com.cc';
+			var ar = is_email(email) ? 'yyy' : 'nnn';
+			document.writeln(ar);
 		</script>
 	</head>
 	<body>
