--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<script src="board.js"></script>
 
 		<script type="text/javascript">
-			var email = 'apibra.in@gmail.com.cc';
+			var email = 'apibra.in@gmail.com';
 			var ar = is_email(email) ? 'yyy' : 'nnn';
 			document.writeln(ar);
 		</script>
