--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 		<script src="board.js"></script>
 
 		<script type="text/javascript">
-			var email = 'apibra.in@gmail.com';
-			var ar = is_email(email) ? 'yyy' : 'nnn';
-			document.writeln(ar);
+			// var email = 'apibra.in@gmail.com';
+			// var ar = is_email(email) ? 'yyy' : 'nnn';
+			// document.writeln(ar);
+			var a = 3, b = 28;
+			document.writeln(a + ' --- ' + b + '<br>');
+			// swap(a, b);
+			a = [b, b = a][0];
+			document.writeln(a + ' --- ' + b);
 		</script>
 	</head>
 	<body>
